update p. r. responses
